# pci-auditor

./: .env.example  .gitignore  .pci-auditor.yml.example  README.md  VIDEO_SCRIPT.md  azure-pipelines.yml  pyproject.toml  requirements.txt
.github/workflows/: pci-audit.yml  pci-full-scan.yml  pci-pr-scan.yml  pci-scan-reusable.yml
docs/: DEMO_SCRIPTS.md
infra/: deploy.ps1  main.bicep
pci_auditor/: __init__.py  cli.py  config.py  models.py
pci_auditor/ai/: openai_client.py  rule_embedder.py  rule_index.py
pci_auditor/reporter/: console_reporter.py  json_reporter.py  sarif_reporter.py
pci_auditor/rules/: pci_rules.json  rule_loader.py  rule_manager.py
pci_auditor/scanner/: codebase_scanner.py  file_scanner.py  pr_scanner.py
sample-vulnerable-app/.github/workflows/: pci-audit.yml
tests/: test_openai_client.py  test_pattern_scanner.py  test_pr_scanner.py  test_reporters.py  test_rule_manager.py  test_rule_retriever.py
